; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/cmdutils/whoami/extr_whoami.c_WhoamiUser.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/cmdutils/whoami/extr_whoami.c_WhoamiUser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i32 }

@TokenUser = common dso_local global i32 0, align 4
@NameSamCompatible = common dso_local global i32 0, align 4
@IDS_USER_HEADER = common dso_local global i32 0, align 4
@IDS_COL_USER_NAME = common dso_local global i32 0, align 4
@IDS_COL_SID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @WhoamiUser() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_11__*, align 8
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca %struct.TYPE_11__*, align 8
  %5 = alloca i32*, align 8
  %6 = load i32, i32* @TokenUser, align 4
  %7 = call i32 @WhoamiGetTokenInfo(i32 %6)
  %8 = sext i32 %7 to i64
  %9 = inttoptr i64 %8 to %struct.TYPE_11__*
  store %struct.TYPE_11__* %9, %struct.TYPE_11__** %2, align 8
  store %struct.TYPE_11__* null, %struct.TYPE_11__** %3, align 8
  store %struct.TYPE_11__* null, %struct.TYPE_11__** %4, align 8
  store i32* null, i32** %5, align 8
  %10 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %11 = icmp eq %struct.TYPE_11__* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %0
  store i32 1, i32* %1, align 4
  br label %52

13:                                               ; preds = %0
  %14 = load i32, i32* @NameSamCompatible, align 4
  %15 = call %struct.TYPE_11__* @WhoamiGetUser(i32 %14)
  store %struct.TYPE_11__* %15, %struct.TYPE_11__** %3, align 8
  %16 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %17 = icmp eq %struct.TYPE_11__* %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %20 = call i32 @WhoamiFree(%struct.TYPE_11__* %19)
  store i32 1, i32* %1, align 4
  br label %52

21:                                               ; preds = %13
  %22 = call i32* @WhoamiAllocTable(i32 2, i32 2)
  store i32* %22, i32** %5, align 8
  %23 = load i32, i32* @IDS_USER_HEADER, align 4
  %24 = call i32 @WhoamiPrintHeader(i32 %23)
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* @IDS_COL_USER_NAME, align 4
  %27 = call %struct.TYPE_11__* @WhoamiLoadRcString(i32 %26)
  %28 = call i32 @WhoamiSetTable(i32* %25, %struct.TYPE_11__* %27, i32 0, i32 0)
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* @IDS_COL_SID, align 4
  %31 = call %struct.TYPE_11__* @WhoamiLoadRcString(i32 %30)
  %32 = call i32 @WhoamiSetTable(i32* %29, %struct.TYPE_11__* %31, i32 0, i32 1)
  %33 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %34 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @ConvertSidToStringSidW(i32 %36, %struct.TYPE_11__** %4)
  %38 = load i32*, i32** %5, align 8
  %39 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %40 = call i32 @WhoamiSetTable(i32* %38, %struct.TYPE_11__* %39, i32 1, i32 0)
  %41 = load i32*, i32** %5, align 8
  %42 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %43 = call i32 @WhoamiSetTable(i32* %41, %struct.TYPE_11__* %42, i32 1, i32 1)
  %44 = load i32*, i32** %5, align 8
  %45 = call i32 @WhoamiPrintTable(i32* %44)
  %46 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %47 = call i32 @LocalFree(%struct.TYPE_11__* %46)
  %48 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %49 = call i32 @WhoamiFree(%struct.TYPE_11__* %48)
  %50 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %51 = call i32 @WhoamiFree(%struct.TYPE_11__* %50)
  store i32 0, i32* %1, align 4
  br label %52

52:                                               ; preds = %21, %18, %12
  %53 = load i32, i32* %1, align 4
  ret i32 %53
}

declare dso_local i32 @WhoamiGetTokenInfo(i32) #1

declare dso_local %struct.TYPE_11__* @WhoamiGetUser(i32) #1

declare dso_local i32 @WhoamiFree(%struct.TYPE_11__*) #1

declare dso_local i32* @WhoamiAllocTable(i32, i32) #1

declare dso_local i32 @WhoamiPrintHeader(i32) #1

declare dso_local i32 @WhoamiSetTable(i32*, %struct.TYPE_11__*, i32, i32) #1

declare dso_local %struct.TYPE_11__* @WhoamiLoadRcString(i32) #1

declare dso_local i32 @ConvertSidToStringSidW(i32, %struct.TYPE_11__**) #1

declare dso_local i32 @WhoamiPrintTable(i32*) #1

declare dso_local i32 @LocalFree(%struct.TYPE_11__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
